# c8c

./: CMakeLists.txt  README.md  build.sh
include/: audio.h  audio.hpp  consts.h  consts.hpp  cpu.h  cpu.hpp  emulator.h  emulator.hpp  memory.h  memory.hpp  render_table.h  render_table.hpp
src/: audio.c  audio.cpp  cpu.c  cpu.cpp  emulator.c  emulator.cpp  main.c  main.cpp  memory.c  memory.cpp  render_table.c  render_table.cpp
